# rural_producers

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  wait-for-it.sh
apps/: choices.py
apps/farmers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
apps/farmers/migrations/: 0001_initial.py
apps/farmers/templates/: dashboard.html
apps/farmers/tests/: test_models.py  test_serializers.py  test_views_crop.py  test_views_farm.py  test_views_farmer.py  test_views_harvest.py
core/: settings.py  urls.py
